made the url more consistent
